--- a/src/Row.css
+++ b/src/Row.css
@@ -2,6 +2,7 @@
     display: flex;
     overflow-y: hidden;
     overflow-x: scroll;
+    padding: 20px;
 }
 .row_poster{
     width: 100%;
@@ -12,4 +13,8 @@
 }
 .row_poster:hover{
     transform: scale(1.08);
+}
+/* hides the scroll bar but the function of scrolling is still there*/
+.row_posters::-webkit-scrollbar{
+    display: none;
 }
