--- a/src/Row.css
+++ b/src/Row.css
@@ -1,3 +1,6 @@
+.row{
+    margin-left: 20px;
+}
 .row_posters{
     display: flex;
     overflow-y: hidden;
@@ -17,4 +20,11 @@
 /* hides the scroll bar but the function of scrolling is still there*/
 .row_posters::-webkit-scrollbar{
     display: none;
+}
+
+.row_posterLarge{
+    max-height: 250px;
+}
+.row_posterLarge:hover{
+    transform: scale(1.09);
 }
