--- a/src/Banner.css
+++ b/src/Banner.css
@@ -5,7 +5,7 @@
 }
 .banner_contents{
     margin-left: 30px;
-    padding-top: 140px;
+    padding-top: 200px;
     height: 190px;
 }
 .banner_title{
@@ -14,8 +14,10 @@
     padding-bottom: 0.3rem;
 }
 .banner_description{
-    width: 45rem;
+    width: 50rem;
     line-height: 1.3;
     padding-top: 1rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
+    max-width: 450px;
+    height: 80px;
 }
