--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -17,15 +17,17 @@
 }
 
 .nav_logo{
-    width: 80px;
+    width: 130px;
     object-fit: contain;
     position: fixed;
     left: 20;
+    top: 0;
 }
 
 .nav_avatar{
-    width: 30px;
+    width: 40px;
     object-fit: contain;
     position: fixed;
     right: 20px;
+    top: 1;
 }
