--- a/src/Footer.css
+++ b/src/Footer.css
@@ -7,9 +7,13 @@ ul {
   }
   
   .footer {
-    max-width: 70%;
-    margin: 1rem auto;
+    max-width: 100%;
+   padding: auto;
     overflow: auto;
+    padding-bottom: 4%;
+    padding-top: 3%;
+    background-color: #333;
+    margin-top: 5%;
   }
   
   .footer,
@@ -18,9 +22,7 @@ ul {
     font-size: 0.9rem;
   }
   
-  .footer p {
-    margin-bottom: 1.5rem;
-  }
+ 
   
   .footer .footer-cols {
     display: grid;
