--- a/src/Auth.css
+++ b/src/Auth.css
@@ -20,7 +20,7 @@ img {
 
 .showcase {
   width: 100%;
-  height: 100vh;
+  height:auto;
   position: relative;
   background: url("https://www.researchgate.net/publication/338901579/figure/fig7/AS:852769179181058@1580327424263/Netflix-home-page-after-scrolling-down.png") no-repeat center
     center/cover;
@@ -43,25 +43,9 @@ img {
 .showcase-top {
   position: relative;
   z-index: 2;
-  height: 95vh;
+  height: auto;
 }
 
-.showcase-top img {
-  width: 170px;
-  /* position: absolute; */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-left: 0;
-}
-
-.showcase-top .btn-rounded {
-  /* position: absolute; */
-  top: 0;
-  padding-top: -20px;
-  right: 0;
-  transform: translate(-50%, -50%);
-}
 
 .showcase-content {
   position: relative;
@@ -78,7 +62,7 @@ img {
 
 .showcase-content h1 {
   font-weight: 600;
-  font-size: 4.5rem;
+  font-size: 3.5rem;
   line-height: 1.1;
   margin: 0 0 2rem;
 }
@@ -92,40 +76,20 @@ img {
   margin: 0 0 2rem;
 }
 
-.btn-header {
-  display: inline-block;
-  background: #e50914;
-  color: #fff;
-  padding: 0.4rem 1.3rem;
-  font-size: 1rem;
-  text-align: center;
-  border: none;
-  cursor: pointer;
-  margin-right: 0.5rem;
-  transition: opacity 0.2s ease-in;
-  outline: none;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.45);
-  border-radius: 2px;
-}
 
 .btn:hover {
   opacity: 0.9;
 }
 
-.btn-rounded {
-  border-radius: 5px;
-  background-color: #e50914;
-  color: white;
-  padding: 6px 20px;
-}
 
 .btn-xl {
-  font-size: 3rem;
-  padding: 1.5rem 2.1rem;
+  font-size: 2rem;
+  padding: 1rem 2.1rem;
   text-transform: uppercase;
   background-color: #e50914;
   color: white;
   top: 50%;
+  margin-bottom: 25%;
 }
 
 .btn-icon {
@@ -134,14 +98,9 @@ img {
 
 @media (max-width: 960px) {
   .showcase {
-    height: 70vh;
+    height: auto;
   }
 
-  .showcase-top img {
-    top: 30%;
-    left: 5%;
-    transform: translate(0);
-  }
 
   .showcase-content h1 {
     font-size: 3.7rem;
@@ -166,7 +125,7 @@ img {
   }
 
   .showcase-content h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     line-height: 1;
   }
 
