--- a/src/Auth.css
+++ b/src/Auth.css
@@ -22,7 +22,7 @@ img {
   width: 100%;
   height:auto;
   position: relative;
-  background: url("https://www.researchgate.net/publication/338901579/figure/fig7/AS:852769179181058@1580327424263/Netflix-home-page-after-scrolling-down.png") no-repeat center
+  background: url("https://c4.wallpaperflare.com/wallpaper/307/12/896/simple-background-black-background-minimalism-theater-wallpaper-preview.jpg") no-repeat center
     center/cover;
   padding-top: -20px;  
   overflow: hidden;
