--- a/src/Banner.css
+++ b/src/Banner.css
@@ -46,3 +46,14 @@
     height: 15rem;
     background-image: linear-gradient(180deg , transparent,rgba(37,37,37,0.61),#111);
 }
+
+@media (max-width: 768px) {
+    .banner_description{
+        width: 80%;
+        line-height: 1.3;
+        padding-top: 1rem;
+        font-size: 1rem;
+        height: 80px;
+    }
+
+  }
